2017-04-18  George G. Vega Yon <g.vegayon@gmail.com>
	* Initial commit.