@@ -1,3 +1,4 @@
 .Rproj*
 *.o
 .Rhis*
+.Rproj.user
